Actualizacion del tema de login ya funcionando y conectado al WS

--- a/Aplicacion Web/AppWeb_FrutosFrescos/AppWeb_FrutosFrescos/AppWeb_FrutosFrescos.csproj
+++ b/Aplicacion Web/AppWeb_FrutosFrescos/AppWeb_FrutosFrescos/AppWeb_FrutosFrescos.csproj
@@ -119,6 +119,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\Usuario.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service References\wsFrutos\Reference.cs">
       <AutoGen>True</AutoGen>
@@ -206,7 +207,6 @@
     <Folder Include="font\" />
     <Folder Include="images\" />
     <Folder Include="js\" />
-    <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
