--- a/Aplicacion Web/AppWeb_FrutosFrescos/AppWeb_FrutosFrescos/bin/AppWeb_FrutosFrescos.dll.config
+++ b/Aplicacion Web/AppWeb_FrutosFrescos/AppWeb_FrutosFrescos/bin/AppWeb_FrutosFrescos.dll.config
@@ -42,4 +42,16 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <system.serviceModel>
+    <bindings>
+      <basicHttpBinding>
+        <binding name="wsFrutosPortBinding" />
+      </basicHttpBinding>
+    </bindings>
+    <client>
+      <endpoint address="http://localhost:8080/wsFrutos/wsFrutos" binding="basicHttpBinding"
+        bindingConfiguration="wsFrutosPortBinding" contract="wsFrutos.wsFrutos"
+        name="wsFrutosPort" />
+    </client>
+  </system.serviceModel>
 </configuration>
