--- a/wsFrutos/nbproject/private/private.properties
+++ b/wsFrutos/nbproject/private/private.properties
@@ -1,4 +1,8 @@
 deploy.ant.properties.file=C:\\Users\\luisu\\AppData\\Roaming\\NetBeans\\8.1\\config\\GlassFishEE6\\Properties\\gfv31538677014.properties
+file.reference.commons-codec-1.9.jar=E:\\Mis documentos\\OneDrive\\Duoc\\Ing semestre4\\Portafolio\\Desarrollo Versionado\\wsFrutos\\libs\\commons-codec-1.9.jar
+file.reference.gson-2.2.2.jar=E:\\Mis documentos\\OneDrive\\Duoc\\Ing semestre4\\Portafolio\\Desarrollo Versionado\\wsFrutos\\libs\\gson-2.2.2.jar
+file.reference.json-simple-1.1.1.jar=E:\\Mis documentos\\OneDrive\\Duoc\\Ing semestre4\\Portafolio\\Desarrollo Versionado\\wsFrutos\\libs\\json-simple-1.1.1.jar
+file.reference.ojdbc6.jar=E:\\Mis documentos\\OneDrive\\Duoc\\Ing semestre4\\Portafolio\\Desarrollo Versionado\\wsFrutos\\libs\\ojdbc6.jar
 j2ee.platform.is.jsr109=true
 j2ee.server.domain=C:/Users/luisu/AppData/Roaming/NetBeans/8.1/config/GF_4.1.1/domain1
 j2ee.server.home=C:/Program Files/glassfish-4.1.1/glassfish
