--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ Feria Desktop/Feria Desktop/obj/
 Feria Desktop/Feria Desktop/bin/
 Aplicacion Web/FrutosFrescosWebApp/FrutosFrescosWebApp/obj/
 Aplicacion Web/AppWeb_FrutosFrescos/AppWeb_FrutosFrescos/bin/System.Web.WebPages.Razor.xml
+Aplicacion Web/AppWeb_FrutosFrescos.rar
