--- a/Aplicacion Web/AppWeb_FrutosFrescos/AppWeb_FrutosFrescos/Web.config
+++ b/Aplicacion Web/AppWeb_FrutosFrescos/AppWeb_FrutosFrescos/Web.config
@@ -46,10 +46,16 @@
     <bindings>
       <basicHttpBinding>
         <binding name="wsFrutosPortBinding" />
+        <binding name="wsFrutos2PortBinding" />
       </basicHttpBinding>
     </bindings>
     <client>
-      <endpoint address="http://localhost:8080/wsFrutos/wsFrutos" binding="basicHttpBinding" bindingConfiguration="wsFrutosPortBinding" contract="wsFrutos.wsFrutos" name="wsFrutosPort" />
+      <endpoint address="http://localhost:45796/wsFrutos/wsFrutos"
+        binding="basicHttpBinding" bindingConfiguration="wsFrutosPortBinding"
+        contract="wsFrutos.wsFrutos" name="wsFrutosPort" />
+      <endpoint address="http://localhost:45796/wsFrutos/wsFrutos2"
+        binding="basicHttpBinding" bindingConfiguration="wsFrutos2PortBinding"
+        contract="wsFrutos2.wsFrutos2" name="wsFrutos2Port" />
     </client>
   </system.serviceModel>
 </configuration>
